fix channel gif alignment on comments

--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -15,6 +15,10 @@
   &:last-of-type {
     padding-top: var(--spacing-medium);
   }
+
+  .channel-thumbnail {
+    @include handleChannelGif(3rem);
+  }
 }
 
 .comment__create--reply {
